--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -1,4 +1,5 @@
 name: Build and Push Docker Images
+
 on:
   push:
     branches: [main, develop]
@@ -12,9 +13,11 @@ on:
   release:
     types: [published]
   workflow_dispatch:
+
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: registry072/rust-dataset-builder
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -24,8 +27,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
       - name: Log in to Container Registry
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
@@ -33,49 +38,30 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Extract metadata for main image
+
+      - name: Extract metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-      - name: Extract metadata for Flyte image
-        id: meta-flyte
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-flyte
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=raw,value=latest,enable={{is_default_branch}}
-      - name: Build and push Flyte Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./dataset_builder
-          file: ./dataset_builder/Dockerfile.flyte
-          platforms: linux/amd64,linux/arm64
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta-flyte.outputs.tags }}
-          labels: ${{ steps.meta-flyte.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-      - name: Image digest
-        run: |
-          echo "Main image digest: ${{ steps.build-main.outputs.digest }}"
-          echo "Flyte image digest: ${{ steps.build-flyte.outputs.digest }}"
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=ref,event=branch
             type=ref,event=pr
             type=semver,pattern={{version}}
             type=raw,value=latest,enable={{is_default_branch}}
-      - name: Build and push main Docker image
+
+      - name: Build and push Docker image
+        id: build
         uses: docker/build-push-action@v5
         with:
           context: ./dataset_builder
           file: ./dataset_builder/Dockerfile
           platforms: linux/amd64,linux/arm64
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Image digest
+        run: echo "Image digest - ${{ steps.build.outputs.digest }}"
